--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <img src="image18.png" width="64" height="64"/>
 <img src="image19.png" width="64" height="64"/>
 <img src="image20.png" width="64" height="64"/>
+<img src="showImage1.png" width="64" height="64"/>
 <img src="image21.png" width="64" height="64"/>
 <img src="image22.png" width="64" height="64"/>
 <img src="image23.png" width="64" height="64"/>
 <img src="image24.png" width="64" height="64"/>
+<img src="showImage2.png" width="64" height="64"/>
 </body>
 </html>
